# CoPm

./: .gitignore  CMakeLists.txt  Logistic_Regression_FraudDetection.ipynb  Makefile.mk  repo-manifest  repo-package
doc/: CoPm.md  Makefile.mk
inc/: CoBridge.h  CoPm.h
tst/: CoPmStub.cpp  Makefile.mk
