CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
set(PNAME copm)
project(${PNAME})

add_library(${PNAME} INTERFACE)

target_include_directories(${PNAME} INTERFACE
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/inc>
    $<INSTALL_INTERFACE:include>
)

install(TARGETS ${PNAME}
        EXPORT ${PNAME}_Targets
        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})

install(EXPORT ${PNAME}_Targets DESTINATION lib/${PNAME}
  FILE ${PNAME}Config.cmake
)

set(CMAKE_INSTALL_PREFIX /home/damini/local/copm)
export(TARGETS ${PNAME} FILE ${PNAME}Config.cmake)
set(CMAKE_EXPORT_PACKAGE_REGISTRY ON)
export(PACKAGE ${PNAME})

install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/inc/CoPm DESTINATION include)
